infrastructure/prod/technitium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium
  namespace: dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - technitium.home.t12.io
      secretName: technitium-tls
  rules:
    - host: technitium.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium-ui
                port:
                  number: 5380
